// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic-handlebars.html 1`] = `
<script id="entry-template" type="text/x-handlebars-template">
  <div class="entry">
    <h1>{{title}}</h1>
    <div class="body">
      {{body}}
    </div>
  </div>
</script>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<script id="entry-template" type="text/x-handlebars-template">

  <div class="entry">

    <h1>
      {{title}}
    </h1>

    <div class="body">

      {{body}}

    </div>

  </div>

</script>

`;

exports[`comments.html 1`] = `
<div class="entry">
  {{! This comment will not be in the output }}
  {{!-- This comment as }} and will not be in the output --}}
  <!-- This comment will be in the output -->
</div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<div class="entry">

  {{! This comment will not be in the output }}
  {{!-- This comment as }} and will not be in the output --}}

  <!-- This comment will be in the output -->

</div>

`;

exports[`each.html 1`] = `
<div id="comments">
  {{#each comments}}
  <h2><a href="/posts/{{permalink}}#{{id}}">{{title}}</a></h2>
  <div>{{body}}</div>
  {{/each}}
</div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<div id="comments">

  {{#each comments}}

    <h2>
      <a href="/posts/{{permalink}}#{{id}}">
        {{title}}
      </a>
    </h2>

    <div>
      {{body}}
    </div>

  {{/each}}
</div>

`;

exports[`if.html 1`] = `
{{#if title}}
  {{permalink}}
{{/if}}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{{#if title}}

  {{permalink}}

{{/if}}
`;

exports[`if-else.html 1`] = `
<h1>
{{#if isAtWork}}
  Ship that code!
{{else if isReading}}
  You can finish War and Peace eventually...
{{/if}}
</h1>

<h2>
{{#if a}}
  A
{{else}}
  B
{{/if}}
</h2>

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<h1>

  {{#if isAtWork}}
    Ship that code!

    {{else if isReading}}
      You can finish War and Peace eventually...

  {{/if}}
</h1>

<h2>

  {{#if a}}
    A
  {{else}}
    B
  {{/if}}
</h2>

`;

exports[`nested-path.html 1`] = `
<div class="entry">
  <h1>{{title}}</h1>
  <h2>By {{author.name}}</h2>

  <div class="body">
    {{body}}
  </div>
</div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<div class="entry">

  <h1>
    {{title}}
  </h1>

  <h2>
    By
    {{author.name}}
  </h2>

  <div class="body">

    {{body}}

  </div>

</div>

`;

exports[`raw.html 1`] = `
<pre>{{{raw}}}</pre>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<pre>
  {{{raw}}}
</pre>

`;
